{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 137,
  "lineage": "8f1f8c1b-5e31-f477-2178-a3cc1760d49e",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047126e50991d067b",
            "arn": "arn:aws:ec2:ap-southeast-1:203918871595:instance/i-082e79208732e9d37",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082e79208732e9d37",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Lab 1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb43490bab042784",
            "private_dns": "ip-10-0-2-108.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0811f2a3b0b31113e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-003e16c56f04d3abe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01fb3d4d81cada9b6",
            "tags": {
              "Name": "PrivateInstance_lab_1"
            },
            "tags_all": {
              "Name": "PrivateInstance_lab_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-003e16c56f04d3abe"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.private_ec2_sg",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047126e50991d067b",
            "arn": "arn:aws:ec2:ap-southeast-1:203918871595:instance/i-04b68d7ca86fb65c6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b68d7ca86fb65c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Lab 1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0478d0a05d1b9677c",
            "private_dns": "ip-10-0-1-22.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-54-255-189-78.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.189.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09fb9bd83419ff569",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0610fe04fa1a8d29b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c97f0acf7f8d9e22",
            "tags": {
              "Name": "PublicInstance_lab_1"
            },
            "tags_all": {
              "Name": "PublicInstance_lab_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0610fe04fa1a8d29b"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.public_ec2_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07dd14de2f0977d39",
            "arn": "arn:aws:ec2:ap-southeast-1:203918871595:elastic-ip/eipalloc-07dd14de2f0977d39",
            "association_id": "eipassoc-08c68eceb25ec3575",
            "domain": "vpc",
            "id": "eipalloc-07dd14de2f0977d39",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-09a5780605d713ea9",
            "private_dns": "ip-10-0-1-173.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.173",
            "public_dns": "ec2-54-254-102-175.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.102.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NATEIP_lab_1"
            },
            "tags_all": {
              "Name": "NATEIP_lab_1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07dd14de2f0977d39",
            "association_id": "eipassoc-097232f771076b7a1",
            "connectivity_type": "public",
            "id": "nat-0f4c6b2301e4ead7b",
            "network_interface_id": "eni-06a88845fe5929ba1",
            "private_ip": "10.0.2.101",
            "public_ip": "54.254.102.175",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01fb3d4d81cada9b6",
            "tags": {
              "Name": "NAT_lab_1"
            },
            "tags_all": {
              "Name": "NAT_lab_1"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:203918871595:route-table/rtb-01b54f07e7a3f0959",
            "id": "rtb-01b54f07e7a3f0959",
            "owner_id": "203918871595",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f4c6b2301e4ead7b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable_lab_1"
            },
            "tags_all": {
              "Name": "PrivateRouteTable_lab_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0829f584be938da16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.nat_gateway.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:203918871595:route-table/rtb-0e1465945ec3b541c",
            "id": "rtb-0e1465945ec3b541c",
            "owner_id": "203918871595",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004ac38b3a280a812",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable_lab_1"
            },
            "tags_all": {
              "Name": "PublicRouteTable_lab_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0829f584be938da16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026f79645c00cb75e",
            "route_table_id": "rtb-01b54f07e7a3f0959",
            "subnet_id": "subnet-01fb3d4d81cada9b6"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_eip",
            "module.nat_gateway.aws_nat_gateway.nat",
            "module.route_table.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b89929ab12e45db",
            "route_table_id": "rtb-0e1465945ec3b541c",
            "subnet_id": "subnet-0c97f0acf7f8d9e22"
          },
          "dependencies": [
            "module.route_table.aws_route_table.public_rt",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:203918871595:security-group/sg-003e16c56f04d3abe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003e16c56f04d3abe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from Public EC2",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0610fe04fa1a8d29b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241028065737564100000001",
            "name_prefix": "terraform-",
            "owner_id": "203918871595",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PrivateEC2SecurityGroup_lab_1"
            },
            "tags_all": {
              "Name": "PrivateEC2SecurityGroup_lab_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0829f584be938da16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:203918871595:security-group/sg-0610fe04fa1a8d29b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0610fe04fa1a8d29b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from EC2 Instance Connect",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-073f7512b7b9a2450"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241028065737564800000002",
            "name_prefix": "terraform-",
            "owner_id": "203918871595",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PublicEC2SecurityGroup_lab_1"
            },
            "tags_all": {
              "Name": "PublicEC2SecurityGroup_lab_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0829f584be938da16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_rule_private_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH from Public EC2",
            "from_port": 22,
            "id": "sgrule-3145260871",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-003e16c56f04d3abe",
            "security_group_rule_id": "sgr-052ffb7afa2c24b04",
            "self": false,
            "source_security_group_id": "sg-0610fe04fa1a8d29b",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_ec2_sg",
            "module.security_groups.aws_security_group.public_ec2_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_rule_public_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH from EC2 Instance Connect",
            "from_port": 22,
            "id": "sgrule-3376105046",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-073f7512b7b9a2450"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-0610fe04fa1a8d29b",
            "security_group_rule_id": "sgr-0f232f8979b1b06b7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.public_ec2_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_rule_private_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-60895579",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-003e16c56f04d3abe",
            "security_group_rule_id": "sgr-041d914c668a09dac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_ec2_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_rule_public_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-1485686001",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0610fe04fa1a8d29b",
            "security_group_rule_id": "sgr-00208b1f21d94c600",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.public_ec2_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:203918871595:internet-gateway/igw-004ac38b3a280a812",
            "id": "igw-004ac38b3a280a812",
            "owner_id": "203918871595",
            "tags": {
              "Name": "IGW_lab_1"
            },
            "tags_all": {
              "Name": "IGW_lab_1"
            },
            "vpc_id": "vpc-0829f584be938da16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:203918871595:subnet/subnet-01fb3d4d81cada9b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fb3d4d81cada9b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918871595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet_lab_1"
            },
            "tags_all": {
              "Name": "PrivateSubnet_lab_1"
            },
            "vpc_id": "vpc-0829f584be938da16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:203918871595:subnet/subnet-0c97f0acf7f8d9e22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c97f0acf7f8d9e22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918871595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet_lab_1"
            },
            "tags_all": {
              "Name": "PublicSubnet_lab_1"
            },
            "vpc_id": "vpc-0829f584be938da16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:203918871595:vpc/vpc-0829f584be938da16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09fda312d7fd67036",
            "default_route_table_id": "rtb-0e186fbbca0ec6100",
            "default_security_group_id": "sg-06f7b98c354411b61",
            "dhcp_options_id": "dopt-09b377a16a3d1f927",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0829f584be938da16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e186fbbca0ec6100",
            "owner_id": "203918871595",
            "tags": {
              "Name": "main_vpc_lab_1"
            },
            "tags_all": {
              "Name": "main_vpc_lab_1"
            }
          }
        }
      ]
    }
  ]
}